--- a/src/styles/_current-weather.scss
+++ b/src/styles/_current-weather.scss
@@ -2,14 +2,15 @@ article.current {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: 
-    [header] 10%
-    [icon-temp] 25% 
+    [current-location] 10%
+    [current-date] 10%
+    [icon-temp] 24% 
     [feels-like] 10% 
     [high-low-labels] 5%
-    [high-low-temps] 15%
+    [high-low-temps] 12%
     [sunrise-sunset-labels] 5%
-    [sunrise-sunset-times] 15%
-    [visibility] 15%;
+    [sunrise-sunset-times] 12%
+    [visibility] 10%;
   grid-row-gap: 0.25rem;
   grid-column-gap: 2rem;
   justify-items: center;
@@ -19,7 +20,8 @@ article.current {
   padding: 36px;
 }
 
-.current-header {
+.current-location,
+.current-date {
   grid-column: 1 / 3;
   margin: 0;
 }
