--- a/src/styles/_current-weather.scss
+++ b/src/styles/_current-weather.scss
@@ -49,4 +49,10 @@ article.current {
   font-size: 1.5rem;
 }
 
+img.current-weather {
+  background-color: #444444;
+  border-radius: 100%;
+  height: 75%;
+}
+
 
