--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,11 +3,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;1,400&family=Playfair+Display:wght@600&display=swap');
 
-
-* {
-  // border: solid;
-}
-
 html {
   line-height: 1.6;
   color: #444444;
@@ -29,10 +24,11 @@ h5 {
 
 body {
   margin: 0;
+  height: 100vh;
 
-  background: #fceabb;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(#f8b500, #fceabb);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(#f8b500, #fceabb); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #90e0ef;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(#ade8f4, #00b4d8);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(#ade8f4, #00b4d8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 header {
